# packsonnet-k8s

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  jsonnetfile.json  main.libsonnet
bazel/: repositories.bzl
examples/: jsonnetfile.json
examples/kind_based_sorting/: main.jsonnet  package.libsonnet
packsonnet-k8s/: BUILD.bazel  main.libsonnet
packsonnet-k8s/file/: BUILD.bazel  main.libsonnet
packsonnet-k8s/package/: BUILD.bazel  main.libsonnet
packsonnet-k8s/resource/: BUILD.bazel  main.libsonnet
