load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")

jsonnet_library(
    name = "packsonnet-k8s",
    srcs = [
        "main.libsonnet",
    ],
    deps = [
        "//packsonnet-k8s/package:package",
        "//packsonnet-k8s/file:file",
    ],
    visibility = [
        "//:__pkg__",
    ],
)
